Breadcrumb alignment fixes

--- a/src/components/BreadCrumb/index.scss
+++ b/src/components/BreadCrumb/index.scss
@@ -18,8 +18,8 @@
 
     &.active {
       color: $text-color !important;
-      font-size: 15px !important;
-      font-weight: 500 !important;
+      font-size: 14px !important;
+      font-weight: 600 !important;
     }
   }
 
